--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 # MONGO_URL=mongodb+srv://abhishekomr07:omr1234567@cluster0.lxapa.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 # PORT=8000
 # AUTHMAIL=abhishekomr07@gmail.com
-# AUTHPASSWORD=jxfh xiae vksm kpoa
+# AUTHPASSWORD=xucw stsn fmlx mbop
 # JWT_SECRET=onscreenmarking
 
 
