created folder strucute and working on schema , questionDefinition and subQuestion

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,10 @@
 # Created by https://www.toptal.com/developers/gitignore/api/node
 # Edit at https://www.toptal.com/developers/gitignore?templates=node
 
-#
-# MONGO_URL=mongodb+srv://abhishekomr07:omr1234567@cluster0.lxapa.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+# MONGO_URL=mongodb+srv://abhishekomr077:abhishek07@cluster0.jltq9.mongodb.net/onscreenmarking?retryWrites=true&w=majority&appName=Cluster0
 # PORT=8000
-# AUTHMAIL=abhishekomr07@gmail.com
-# AUTHPASSWORD=xucw stsn fmlx mbop
+# AUTHMAIL=abhishekomr077@gmail.com
+# AUTHPASSWORD=ppat iicd whun nwod
 # JWT_SECRET=onscreenmarking
 
 
