--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,9 @@ lerna-debug.log*
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
+
+uploadedPdfs
+
 # Runtime data
 pids
 *.pid
