create scanned file

--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,13 @@
 # Edit at https://www.toptal.com/developers/gitignore?templates=node
 
 # MONGO_URL=mongodb+srv://abhishekomr077:abhishek07@cluster0.jltq9.mongodb.net/onscreenmarking?retryWrites=true&w=majority&appName=Cluster0
+# MONGO_URL=mongodb+srv://abhiarya97161:OtzYANBZMMFFYyD1@cluster0.03pwr.mongodb.net/onscreenmarking?retryWrites=true&w=majority&appName=Cluster0
 # PORT=8000
 # AUTHMAIL=abhishekomr077@gmail.com
-# AUTHPASSWORD=ppat iicd whun nwod
+# AUTHPASSWORD=ayzs jnxx ehnn oqsx
 # JWT_SECRET=onscreenmarking
+# BASE_DIR=scanned
+
 
 
 
