--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "description": "",
   "dependencies": {
     "@types/mongoose": "^5.11.97",
+    "archiver": "^7.0.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.2",
+    "express-fileupload": "^1.5.1",
     "express-validator": "^7.2.0",
     "fs-extra": "^11.2.0",
     "jsonwebtoken": "^9.0.2",
@@ -25,6 +27,7 @@
     "nodemon": "^3.1.4",
     "pdf-lib": "^1.17.1",
     "pdf-poppler": "^0.2.1",
-    "uuid": "^11.0.3"
+    "uuid": "^11.0.3",
+    "yargs": "^17.7.2"
   }
 }
