--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "nodemon": "^3.1.4",
     "pdf-lib": "^1.17.1",
     "pdf-poppler": "^0.2.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "uuid": "^11.0.3",
     "yargs": "^17.7.2"
   }
