--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "archiver": "^7.0.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
+    "chokidar": "^4.0.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.2",
@@ -30,6 +31,7 @@
     "pdfjs-dist": "^4.9.155",
     "rimraf": "^6.0.1",
     "sharp": "^0.33.5",
+    "socket.io": "^4.8.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^11.0.3",
