--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^11.0.3",
+    "xlsx": "^0.18.5",
     "yargs": "^17.7.2"
   }
 }
