--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "body-parser": "^1.20.3",
     "chokidar": "^4.0.3",
     "cors": "^2.8.5",
+    "csv-parser": "^3.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.2",
     "express-fileupload": "^1.5.1",
     "express-validator": "^7.2.0",
     "fs-extra": "^11.2.0",
+    "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.2",
     "multer": "^1.4.5-lts.1",
