--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "pdf-lib": "^1.17.1",
     "pdf-poppler": "^0.2.1",
     "pdfjs-dist": "^4.9.155",
+    "pdfkit": "^0.16.0",
     "rimraf": "^6.0.1",
     "sharp": "^0.33.5",
     "socket.io": "^4.8.1",
